Minor updates to notebook 01

--- a/Notebooks/01 Stats and Computing Basics.ipynb
+++ b/Notebooks/01 Stats and Computing Basics.ipynb
@@ -584,7 +584,7 @@
     "\n",
     "Python errors are generally pretty informative, and while it can be hard to figure out exactly what went wrong in a large program, an error message almost always gives you some useful clues. In any case, explicit errors like this one are a lot easier to debug than are subtler errors where the code runs fine, but gives unexpected results. Or even worse, where the results *seem* fine, but aren't (becuase of an error in your logic, say, or an operation performed on the wrong data).\n",
     "\n",
-    "**NB.** Watch out for implicit, silent type conversions in your code. They often do what you want (such as converting between integers and flaots), but not always. This can be the source of difficult bugs.\n",
+    "**NB.** Watch out for implicit, silent type conversions in your code. They often do what you want (such as converting between integers and floats), but not always. This can be the source of difficult bugs.\n",
     "\n",
     "### Iteration and flow control\n",
     "\n",
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -840,8 +840,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Divisible by  5: 20\n",
-      "Divisible by 10: 10\n"
+      "Items divisible by 5:  20\n",
+      "Items divisible by 10: 10\n"
      ]
     }
    ],
@@ -855,8 +855,8 @@
     "        div_by_5 += 1\n",
     "        if i%10 == 0:\n",
     "            div_by_10 += 1\n",
-    "print('Divisible by  5:', div_by_5)\n",
-    "print('Divisible by 10:', div_by_10)"
+    "print('Items divisible by 5: ', div_by_5)\n",
+    "print('Items divisible by 10:', div_by_10)"
    ]
   },
   {
@@ -2712,9 +2712,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2726,7 +2726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0rc4"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
